<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/icon_order"
        android:title="@string/title_order" />


    <item
        android:id="@+id/navigation_manage"
        android:title="@string/title_manage"
        android:icon="@drawable/manage"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />

</menu>