<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rr_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <include
           layout="@layout/layout_place_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

        </include>-->


    <FrameLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/white_border"
        android:elevation="10dp"
        android:visibility="visible">

        <fragment
            android:id="@+id/autocomplete_support_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/frGraphLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#CCffffff"
        android:elevation="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:text="@string/range_u20b950_lac"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:text="@string/range_u20b950_lac_to_u20b925_lac"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/tvGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/range_u20b9_25_lac"
                android:textAllCaps="false"
                android:textColor="@color/green_light"
                android:textSize="@dimen/_10sdp"
                android:visibility="visible" />


        </LinearLayout>

    </FrameLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonScreenshot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Take ScreenShot"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonViewScreenshot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="View ScreenShot"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSendScreenshot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:text="Send ScreenShot"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone" />


    </LinearLayout>

</RelativeLayout>